# pypeeker

./: .gitignore  CLAUDE.md  Dockerfile  architecture.md  pyproject.toml  storage-transaction-architecture.md
.claude/: settings.local.json
.claude/hooks/: session-start.sh
.github/: ci.yml.example
backlog/: config.yml
backlog/archive/drafts/: draft-2 - Gap-A-part-3-constructor-inference-multi-hop-chains-confidence-gated-rename.md
backlog/drafts/: draft-1 - Alias-preserving-rename-rename-a-definition-while-holding-its-public-export-name.md  draft-1 - plan-inline-variable.md  draft-2 - plan-extract-method.md  draft-3 - plan-move-symbol.md  draft-4 - rewrite-for-loop-to-comprehension-purity-gated.md
backlog/tasks/: task-1 - Purity-checker-package-skeleton-models.md  task-10 - Strengthen-evidence-shape-assertions-across-purity-tests.md  task-100 - ci-GitHub-Actions-workflow-tests-self-lint-ruff.md  task-101 - Binder-record-WRITE-facts-for-subscript-stores-on-attribute-chains.md  task-102 - fix-binder-misses-name-references-inside-parenthesized-except-tuples.md  task-103 - check-curate-models-barrel-and-migrate-consumers-off-deep-imports.md  task-104 - check-add-barrel-only-import-rule-and-enable-it-repo-wide.md  task-105 - cli-keep-refactor-lazy-imports-targeting-submodules-to-preserve-laziness.md  task-106 - check-split-the-rule-engine-framework-from-the-builtin-rule-library.md  task-107 - adapters-curate-barrel-exposing-PythonAdapter-and-migrate-consumers.md  task-108 - ci-activate-the-CI-workflow-move-ci.yml.example-into-.github-workflows.md  task-109 - check-route-clis-baseline-import-through-the-check-barrel-dedup-_package_under.md  task-11 - Refactor-purity-test-code-for-less-duplication.md  task-12 - Binder-preserve-receiver-root-chain-on-attribute-access-refs.md  task-13 - Analysis-use-receiver-fields-replace-heuristics-eliminate-false-negatives.md  task-14 - Type-aware-receiver-classification-for-purity-check.md  task-15 - Cross-file-call-graph-for-transitive-purity.md  task-16 - Refine-purity-attribute-denylist-to-reduce-evidence-noise.md  task-17 - Refactor-binder-free-functions-over-BinderState-keep-Binder-facade.md  task-18 - Drop-Binder-class-facade-migrate-call-sites-to-bind-function.md  task-19 - Add-pypeeker-check-command-for-linter-style-rule-enforcement.md  task-2 - Purity-checker-detect-writes-to-outer-scope.md  task-20 - Binder-treat-Python-builtins-as-resolved-frozenset-property-len-annotations-etc..md  task-21 - Binder-treat-Python-builtins-as-resolved-references.md  task-22 - Add-pypeeker-check-command-linter-style-rule-enforcement-via-pyproject.toml.md  task-23 - Binder-skip-keyword-argument-names-in-calls.md  task-24 - Binder-resolve-forward-references-to-module-level-symbols.md  task-25 - Binder-bind-comprehension-and-generator-variables.md  task-26 - Add-missing-docstrings-to-public-APIs-flagged-by-require-docstrings.md  task-27 - Semantic-path-symbol-ids-root-symbol_id-at-dotted-module-path.md  task-28 - Symbol-tree-package-module-first-class-symbols-with-persisted-incrementally-invalidated-tree.md  task-29 - Cross-module-resolution-resolve-imports-and-re-exports-to-canonical-definitions.md  task-3 - Purity-checker-detect-impure-builtin-stdlib-calls.md  task-30 - Cascade-rename-update-cross-module-call-sites-via-cross-module-resolution.md  task-31 - Transitive-barrel-rename-update-package-re-export-consumer-imports.md  task-32 - check-import-boundaries-rule-to-enforce-package-layering.md  task-33 - analysis-consume-CrossModuleResolver-in-call-graph-remove-duplicate-resolution.md  task-34 - tree-decouple-reconciliation-from-storage-audit-3.md  task-35 - binder-bind-function-parameter-and-return-type-annotations-as-references.md  task-36 - Resolve-module-and-class-qualified-attribute-references-Gap-A-part-1.md  (+69 more)
src/pypeeker/: __init__.py  cli.py  indexer.py  paths.py  project.py  resolve.py  tree.py  treebuild.py
src/pypeeker/adapters/: __init__.py  base.py  python_adapter.py
src/pypeeker/analysis/: __init__.py  call_graph.py  calls.py  context.py  graph.py  hierarchy.py  observations.py  purity.py  writes.py
src/pypeeker/app/: __init__.py  batch_intents.py  check_fixes.py  privatize.py
src/pypeeker/binder/: __init__.py  assignments.py  binder.py  helpers.py  imports.py  references.py  scope_stack.py  scopes.py  state.py
src/pypeeker/check/: __init__.py  baseline.py  config.py  context.py  demotion.py  engine.py  fixes.py  models.py  rules.py
src/pypeeker/models/: __init__.py  capabilities.py  index.py  location.py  references.py  scopes.py  serialize.py  symbol_id.py  symbols.py  transaction.py  tree.py
tests/: conftest.py  test_analysis_facts.py  test_app_batch_intents.py  test_app_check_fixes.py  test_app_privatize.py  test_applier.py  test_baseline.py  test_batch.py  test_binder.py  test_binder_builtins.py  test_binder_comprehensions.py  test_binder_errors.py  test_binder_forward_refs.py  test_binder_kwargs.py  test_binder_receiver_chain.py  test_binder_subscript_writes.py  test_builtin_discovery.py  test_check_config.py  test_check_engine.py  test_check_fix.py  test_check_rules.py  test_cli.py  test_cli_freshness.py  test_confidence.py  test_convention_renames.py  test_extract_method.py  test_extract_variable.py  test_fix_protocol.py  test_hierarchy.py  test_indexer.py  test_inline_variable.py  test_intents.py  test_models.py  test_overlay_store.py  test_plan_batch_cli.py  test_planner.py  test_preconditions.py  test_privatize.py  test_privatize_cli.py  test_project.py  (+32 more)
tests/e2e/: test_cli.py  test_rename_cli.py
tests/fixtures/: class_with_methods.py  comprehensions.py  decorators.py  imports_example.py  nested_scopes.py  shadowing.py  simple_function.py  type_annotations.py
tests/integration/: test_applier.py  test_applier_coverage.py  test_binder.py  test_binder_coverage.py  test_planner.py  test_query_engine.py  test_query_engine_coverage.py  test_storage.py  test_transaction_storage.py
tests/unit/: test_applier_internals.py  test_models.py  test_python_adapter.py  test_scope_stack.py  test_transaction_models.py
(+100 files in other folders)
