[project]
name = "pypeeker"
version = "0.1.0"
description = "Semantic code intelligence CLI for Python"
requires-python = ">=3.14"
dependencies = [
    "tree-sitter>=0.23,<0.26",
    "tree-sitter-python>=0.23",
    "click>=8.1",
]

[project.scripts]
pypeeker = "pypeeker.cli:main"
semantic-tool = "pypeeker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pypeeker"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
