[project]
name = "pypeeker"
version = "0.1.0"
description = "Semantic code intelligence CLI for Python"
requires-python = ">=3.14"
dependencies = [
    "tree-sitter>=0.23,<0.26",
    "tree-sitter-python>=0.23",
    "click>=8.1",
]

[project.scripts]
pypeeker = "pypeeker.cli:main"
semantic-tool = "pypeeker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pypeeker"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pypeeker]
src = ["src"]
rules = ["require-docstrings", "no-unresolved-refs", "import-boundaries"]

[tool.pypeeker.require-docstrings]
kinds = ["function", "method", "class"]
visibility = ["public"]

# Enforced package layering. Each key is a top-level package under `pypeeker`;
# its value lists the packages it may import. Packages omitted here (e.g. the
# `cli` composition root) are unconstrained. See architecture.md.
[tool.pypeeker.import-boundaries]
root = "pypeeker"

[tool.pypeeker.import-boundaries.allow]
models = []
paths = []
project = []
adapters = ["models"]
binder = ["adapters", "models", "paths"]
storage = ["models"]
resolve = ["models"]
tree = ["models", "storage", "paths"]
check = ["models", "project", "storage", "resolve", "tree", "analysis", "query"]
query = ["models", "storage", "tree", "resolve"]
analysis = ["models", "storage", "query", "resolve"]
indexer = ["adapters", "binder", "paths", "project", "storage"]
refactor = ["adapters", "analysis", "binder", "models", "paths", "project", "query", "storage"]

