[project]
name = "pypeeker"
version = "0.1.0"
description = "Semantic code intelligence CLI for Python"
requires-python = ">=3.14"
dependencies = [
    "tree-sitter>=0.23,<0.26",
    "tree-sitter-python>=0.23",
    "click>=8.1",
]

[project.scripts]
pypeeker = "pypeeker.cli:main"
semantic-tool = "pypeeker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pypeeker"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100
# Test fixtures intentionally contain unused imports, undefined names, etc.
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
# Conservative selection: pycodestyle errors/warnings + pyflakes.
# Import sorting (I) and pyupgrade (UP) are candidate follow-ups once the
# existing findings are cleaned up.
select = ["E", "F", "W"]
# Long lines are not enforced yet (existing code exceeds any sensible limit).
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Imports after the rule-registration docstring/setup are deliberate.
"src/pypeeker/check/builtin/__init__.py" = ["E402"]
# Deliberate constructs exercised by the tests themselves.
"tests/test_binder.py" = ["F841"]
"tests/test_planner.py" = ["F841"]
"tests/test_purity.py" = ["E702"]
"tests/test_purity_self.py" = ["E702"]
"tests/test_purity_typed_receivers.py" = ["E702"]

[tool.pypeeker]
src = ["src"]
rules = ["require-docstrings", "no-unresolved-refs", "import-boundaries"]

# Click commands/groups are reached by framework name, not by reference:
# renaming the function would rename the user-facing CLI command. Exempts
# them from the visibility-shaped rules (found by the `pypeeker privatize`
# dogfood, TASK-97).
[tool.pypeeker.visibility]
allow-decorators = ["main.command", "main.group", "transactions.command"]

# Known false positive: the binder does not record name references inside
# parenthesized `except (A, B)` tuples, so this symbol's uses in batch.py
# and cli.py are invisible to the over-exposure rules (bare `except A` is
# captured fine). Remove once the binder gap is fixed.
[tool.pypeeker.over-exposed-module-symbol]
allow = ["pypeeker.refactor.extract:ExtractVariableError"]

[tool.pypeeker.require-docstrings]
kinds = ["function", "method", "class"]
visibility = ["public"]

# Enforced package layering. Each key is a top-level package under `pypeeker`;
# its value lists the packages it may import. Packages omitted here (e.g. the
# `cli` composition root) are unconstrained. See architecture.md.
[tool.pypeeker.import-boundaries]
root = "pypeeker"
# Every top-level unit under `pypeeker` must be declared below or listed as
# unconstrained; a new undeclared package fails `check` (strict mode). `cli`
# is the composition root and is deliberately unconstrained.
strict = true
unconstrained = ["cli"]
# Flag allow-list entries that no real import exercises, so the layering table
# doesn't rot as dependencies are removed.
report-unused-allowances = true

[tool.pypeeker.import-boundaries.allow]
models = []
paths = []
project = []
adapters = ["models"]
binder = ["adapters", "models", "paths"]
storage = ["models"]
resolve = ["models"]
treebuild = ["models", "storage", "paths"]
check = ["models", "project", "storage", "resolve", "treebuild", "analysis", "query"]
query = ["models", "storage", "treebuild", "resolve"]
analysis = ["models", "storage", "query", "resolve"]
indexer = ["adapters", "binder", "paths", "project", "storage"]
refactor = ["adapters", "analysis", "binder", "models", "paths", "project", "query", "storage"]
app = ["check", "models", "refactor", "storage"]

